# interactive-feedback-mcp

./: .cvignore  .gitignore  VERSION_MANAGEMENT_README.md  feedback_ui.py  pyproject.toml  quick_version_update.sh  readme.md  server.py  version_check.sh  版本号更新标准流程.md  重构方案.md
interactive_feedback_mcp/: __init__.py  feedback_ui.py  history_db.py  isolation_utils.py  server.py  timer_manager.py
scripts/: run_interactive_env.py
tests/: test_history_functionality.py
